@@ -1,0 +1,1 @@
+Selecting code context lines no longer causes a jump.
